# FinGenius_V_2

./: package-lock.json  package.json
backend/: .env  .gitignore  demo.ipynb  main.py  pyproject.toml
frontend/.--/: package-lock.json  package.json  vite.config.ts
